# fastapi-shopchik

./: README.md  main.py  pyproject.toml
api/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py
