[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Pimple",email = "07700660gg@mail.ru"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
